# chi-agent

./: README.md  pyproject.toml
app/: main.py  openai_helper.py
scripts/: build_index.py
